Fix the background cutoff

--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -32,23 +32,26 @@ ul {
     color: green; /* Customize checkmark color */
     font-size: 1.2rem; /* Adjust the size of the checkmark */
   }
-  
+
+html, body {
+    height:100%;
+    margin: 0;
+    padding: 0;
+}
 
 html {
     background-color: #e8e8f1;
     background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e8e8f1 15px ), repeating-linear-gradient( #6d6f9155, #6d6f91 );
-    height:100%;
-    padding-bottom:5rem;
-    background-size: cover;
+    background-size: 100% 100%;
+    background-attachment: fixed;
     background-repeat: no-repeat;
-
 }
 
 .content {
     text-align: center;
     width:80vw;
-    height:90vh;
     margin: auto;
+    padding-bottom: 3rem;
 }
 
 .flex-container{
